# python-project-49

./: Makefile  README.md  brain_even  pyproject.toml
brain_games/scripts/: .brain_calc.py.swp  .brain_even.py.swp  .brain_gcd.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
