[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["evrik163 <evrik163@mail.ru>"]
readme = "README.md"
packages = [ {include = "brain_games"},]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:even_check"
brain-calc = "brain_games.scripts.brain_calc:calc"
brain-gcd = "brain_games.scripts.brain_gcd:gcd"
brain-progression = "brain_games.scripts.brain_progression:prog"
brain-prime = "brain_games.scripts.brain_prime:fin"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
